# rust-task-queue

./: .cursorrules  .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  PUBLISHING.md  README.md  ROADMAP.md  docker-compose.yml  draft.md  roadmap.md  task-queue.toml  task-queue.yaml
benches/: README.md  autoscaler.rs  end_to_end.rs  queue_operations.rs  redis_broker.rs  serialization.rs  task_processing.rs  worker_performance.rs
examples/: README.md  performance_test.rs
examples/actix-integration/: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  http.http  task-queue.toml
examples/actix-integration/src/: main.rs  tasks.rs
examples/actix-integration/src/module_tasks/: communication.rs  mod.rs  processing.rs
examples/axum-integration/: .gitignore  Cargo.toml  README.md  docker-compose.yml  http.http  task-queue.toml
examples/axum-integration/src/: main.rs  tasks.rs
examples/axum-integration/src/module_tasks/: communication.rs  mod.rs  processing.rs
macro/: Cargo.toml
macro/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: cleanup-redis.sh  run-benches.sh  run-benchmarks-with-reports.sh  run-benchmarks.sh  run-tests.sh  test-with-redis.sh  verify-benchmarks.sh
src/: actix.rs  autoscaler.rs  axum.rs  broker.rs  cli.rs  config.rs  error.rs  lib.rs  metrics.rs  prelude.rs  queue.rs  scheduler.rs  task.rs  tracing_utils.rs  worker.rs
tests/: actix_integration_tests.rs  axum_integration_tests.rs  error_scenarios.rs  error_scenarios_tests.rs  integration_tests.rs  performance_tests.rs  security_tests.rs
