[package]
name = "rust-task-queue"
version = "0.1.0"
edition = "2021"
authors = ["Rust Task Queue Contributors"]
description = "A high-performance, Redis-backed task queue framework with auto-scaling capabilities"
documentation = "https://docs.rs/rust-task-queue"
homepage = "https://github.com/rust-task-queue/rust-task-queue"
repository = "https://github.com/rust-task-queue/rust-task-queue"
license = "MIT OR Apache-2.0"
keywords = ["task-queue", "redis", "async", "worker", "celery"]
categories = ["asynchronous", "web-programming", "concurrency"]
readme = "README.md"
exclude = [
    "examples/*",
    "tests/*",
    ".github/*",
    "*.md"
]

[workspace]
members = ["macros"]

[[bin]]
name = "task-worker"
path = "src/bin/task-worker.rs"

[dependencies]
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dashmap = "5.5"
tokio-util = "0.7"
inventory = "0.3"
once_cell = "1.19"
rust-task-queue-macros = { path = "macros", optional = true }
hex = "0.4"

# Optional dependencies
tracing = { version = "0.1", optional = true }
actix-web = { version = "4.4", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
config = { version = "0.14", optional = true }
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]

[features]
default = ["tracing", "auto-register", "config-support", "cli"]
full = ["tracing", "actix-integration", "cli", "auto-register", "config-support"]
auto-register = ["rust-task-queue-macros"]
tracing = ["dep:tracing"]
actix-integration = ["dep:actix-web", "tracing"]
cli = ["dep:clap", "tracing", "dep:tracing-subscriber"]
config-support = ["dep:config", "dep:toml", "dep:serde_yaml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "task_processing"
harness = false

[[bench]]
name = "queue_operations"
harness = false