[package]
name = "actix-integration"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "web-server"
path = "src/main.rs"

[[bin]]
name = "task-worker"
path = "src/bin/task-worker.rs"

[[bin]]
name = "task-worker-env-only"
path = "src/bin/task-worker-env-only.rs"

[dependencies]
rust-task-queue = { path = "../../", features = ["auto-register", "cli", "config-support", "actix-integration", "dynamic-loading"] }
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
