[package]
name = "actix-integration"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rust-task-queue = { path = "../../", features = ["auto-register", "cli", "tracing", "config-support", "actix-integration"] }
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "web-server"
path = "src/main.rs"

[[bin]]
name = "task-worker"
path = "src/bin/task-worker.rs"